add: translation for single page and cv link dynamic

--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -25,5 +25,9 @@
   "checkThis": "Checa esto",
   "aboutMe": "Sobre mi",
   "madeWith": "Hecho con",
-  "by": "por"
+  "by": "por",
+  "date": "FECHA",
+  "repo": "REPOSITORIO",
+  "stack": "TECH USADAS",
+  "resumeLink": "https://drive.google.com/file/d/1wdRQgfnG-8u1qhfTp4D35ceFkCq-Hl97/view?usp=sharing"
 }
