--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -25,5 +25,9 @@
   "checkThis": "Check this",
   "aboutMe": "About me",
   "madeWith": "Made with",
-  "by": "by"
+  "by": "by",
+  "date": "DATE",
+  "repo": "REPO",
+  "stack": "TECH USED",
+  "resumeLink": "https://drive.google.com/file/d/18_Xc-Eu1g9dSMyQVX4bvMFlr1nNVlj3m/view?usp=sharing"
 }
