update: zustand state manager for language and downgrade react v17 to solve hydratation error

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -10,7 +10,7 @@
   "allProjects": "All projects",
   "allCategories": "All categories",
   "all": "All",
-  "webDevTitle": "Web development",
+  "webDevTitle": "Web Dev",
   "designTitle": "Design",
   "filterText": "Check out all the projects I've done.",
   "connectCTA": "Let's connect!",
